Prevent header jumping on scrollbar-less pages

--- a/PublicDomainPulp/snippets/home.css
+++ b/PublicDomainPulp/snippets/home.css
@@ -29,6 +29,10 @@ body {
 .nedi {
   display: var(--nedi) !important; /* okily dokily */
 }
+header {
+  width: 100vw;
+  overflow: hidden;
+}
 header > div {
   display: flex;
   justify-content: center;
